# CodTech

./: .gitignore  README.md  main.py  pyproject.toml
DevLog/: day1.txt  day2.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  tasks.txt
Task1/: main.ipynb  main.py  simple.py
Task2/: main.ipynb  main.py
Task3/: main.ipynb  main.py
Task4/: main.py  simple.py
