[project]
name = "codtech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.2.0",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "matplotlib>=3.10.8",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "speechrecognition[audio]>=3.14.5",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
